<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround">

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:id="@+id/login_banner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <!--<Button
                android:id="@+id/login_banner_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/ent_login_cp"
                android:text="@string/login_type_mobile"
                android:textColor="#FFFDFA"
                android:textSize="16sp"
                />-->

        </RelativeLayout>

        <!--<ImageView
            android:id="@+id/login_banner_line"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/sep_line"
            android:layout_marginTop="10dp"
            />-->

        <RelativeLayout
            android:id="@+id/per_login_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@color/white"
            android:visibility="visible">

            <ImageView
                android:id="@+id/per_mobile_img"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:scaleType="center"
                android:src="@drawable/per_mobile"
                />

            <com.nzy.nim.view.ClearEditText
                android:id="@+id/per_mobile_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/per_mobile_img"
                android:layout_weight="10"
                android:layout_centerInParent="true"
                android:maxLength="11"
                android:background="@null"
                android:ems="13"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/login_per_mobile"
                android:inputType="number"
                android:textColor="@color/gray_text3"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:id="@+id/per_mobile_line"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_line1"
            android:visibility="visible"
            />

        <RelativeLayout
            android:id="@+id/per_passwd_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="visible">

            <ImageView
                android:id="@+id/per_passwd_img"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:scaleType="center"
                android:src="@drawable/ent_passwd"
                />

            <com.nzy.nim.view.ClearEditText
                android:id="@+id/per_passwd_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/per_passwd_img"
                android:layout_weight="10"
                android:layout_centerInParent="true"
                android:maxLength="30"
                android:background="@null"
                android:ems="13"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/login_ent_passwd"
                android:inputType="textPassword"
                android:textColor="@color/gray_text3"
                android:textSize="14sp" />

        </RelativeLayout>

        <!--<View
            android:id="@+id/tool_bottom_line"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            />-->

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="@dimen/margin_15"
            android:layout_marginLeft="@dimen/margin_25"
            android:layout_marginRight="@dimen/margin_25"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/app_login"
            android:text="@string/login_commit"
            android:textColor="#FFFDFA"
            android:textSize="18sp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ent_reg_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:text="注册"
                android:textColor="#3E83EA"
                android:textSize="14sp" />

            <Button
                android:id="@+id/find_passwd_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:text="找回密码"
                android:textColor="#3E83EA"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>