<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/top_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            android:orientation="vertical" >

            <!-- 头像 -->

            <RelativeLayout
                android:id="@+id/activity_mypersonal_head_img_container"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/listview_selector_bg_1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="头像"
                    android:textColor="#666666"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:clickable="true" >

                    <com.nzy.nim.view.RoundImageView
                        android:id="@+id/activity_mypersonal_center_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/pic_default_head" />
                </LinearLayout>
            </RelativeLayout>

            <!-- 昵称 -->

            <RelativeLayout
                android:id="@+id/rl_layout_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/listview_selector_bg_1"
                android:clickable="true" >

                <TextView
                    android:id="@+id/personal_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/nick"
                    android:textColor="#666666"
                    android:textSize="@dimen/small_middle_text_size" />

                <TextView
                    android:id="@+id/activity_personal_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="120dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@+id/personal_name"
                    android:gravity="right"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="#666666"
                    android:textSize="@dimen/small_middle_text_size" />
            </RelativeLayout>
            <!-- 个性签名 -->

            <RelativeLayout
                android:id="@+id/rl_layout_barCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/listview_selector_bg_1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="二维码名片"
                    android:textColor="#666666"
                    android:textSize="@dimen/small_middle_text_size" />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_barcode"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitXY"
                    android:layout_marginRight="20dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_layout_signature"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/listview_selector_bg_1" >

                <TextView
                    android:id="@+id/personal_design"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/sign"
                    android:textColor="#666666"
                    android:textSize="@dimen/small_middle_text_size" />

                <TextView
                    android:id="@+id/activity_personal_design"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@+id/personal_design"
                    android:gravity="right"
                    android:maxLength="12"
                    android:textColor="#666666"
                    android:textSize="@dimen/small_middle_text_size" />
            </RelativeLayout>

            <!-- 性别 -->

            <RelativeLayout
                android:id="@+id/rl_layout_usersex"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/listview_selector_bg_1"
                android:clickable="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/sex"
                    android:textColor="#666666"
                    android:textSize="@dimen/small_middle_text_size" />

                <TextView
                    android:id="@+id/activity_personal_usersex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:textColor="#666666"
                    android:textSize="@dimen/small_middle_text_size" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>